--- a/style.css
+++ b/style.css
@@ -81,5 +81,7 @@ nav li a:hover {
 	color: rgb(143, 58, 58);
 }
 
-
-
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
+body {
+  padding-top: 3.5rem;
+}
